objects/Integration_Settings__c.object
<CustomObject><fields>
        <fullName>Batch_Size__c</fullName>
        <label>Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>CA_Cert__c</fullName>
        <description>CA Signed certificate used in Integration's connecting to MW like OnSupport, Articles service</description>
        <label>CA Cert</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Caller_ID__c</fullName>
        <description>This contains the Math Works Caller Id Value</description>
        <label>Caller ID</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Clientname__c</fullName>
        <label>Clientname</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Endpoint__c</fullName>
        <label>Endpoint Base URL</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Locale__c</fullName>
        <description>This field contains the value of Locale</description>
        <label>Locale</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Retry_Attempts__c</fullName>
        <description>This specifies the number of Attempts for retry for service</description>
        <label>Retry Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Timeout__c</fullName>
        <label>Timeout</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Token__c</fullName>
        <label>Token</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>WSDL_Name_Space__c</fullName>
        <label>WSDL Name Space</label>
        <length>255</length>
        <type>Text</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>Custom Object used on Integrations for retrieving default connection data</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableChangeDataCapture>false</enableChangeDataCapture><enableEnhancedLookup>true</enableEnhancedLookup><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>false</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>Private</externalSharingModel><label>Integration Setting</label><nameField>
        <label>Integration Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Integration Settings</pluralLabel><sharingModel>ReadWrite</sharingModel><visibility>Public</visibility><listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>CA_Cert__c</columns>
        <columns>Caller_ID__c</columns>
        <columns>Clientname__c</columns>
        <columns>Endpoint__c</columns>
        <columns>Locale__c</columns>
        <columns>Password__c</columns>
        <columns>Retry_Attempts__c</columns>
        <columns>Username__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews></CustomObject>